<resources>
    <string name="app_name">Smart_Scale_App_Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="grams"> Grams </string>
    <string name="weight">Weight</string>
    <string name="oz">oz</string>
    <string name="todo">test</string>
    <string name="reset">Reset</string>
    <string name="textview">30.00</string>
    <string name="fl_oz">fl_oz</string>
    <string name="ml">ML</string>

    <string name="menu_recipelist">Recipe List</string>
    <string name="menu_recipe">Recipe</string>

    <string name="quantitytv">quantity</string>
    <string name="unitstv">units</string>
    <string name="ingredientNametv">ingredientName</string>

    <string name="stepNumtv">Step Number</string>
    <string name="methodDesctv">Method Description</string>

    <string name="ingredientsTitle">Ingredients</string>
    <string name="MethodTitle">Method</string>

    <string name="recipeListNametv">Recipe List Name</string>
    <string name="recipeCattv">Recipe Category</string>
    <string name="menu_recipes">Recipes</string>
    <string name="action_add_recipe">add</string>

    <string name="go">Discover</string>
    <string name="connect">Connect</string>
    <string name="menu_settings">Settings</string>

</resources>