<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/foodbacgkround"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
app:layout_constraintHeight_default="spread"
app:layout_constraintWidth_default="spread"
tools:context=".MainActivity">




<Button
    android:id="@+id/gramsbtn"
    android:layout_width="80dp"
    android:layout_height="43dp"
    android:layout_marginStart="60dp"
    android:layout_marginLeft="60dp"
    android:layout_marginTop="22dp"
    android:layout_marginBottom="59dp"
    android:text="@string/grams"
    android:textSize="12sp"
    app:backgroundTint="#DC9679"
    app:layout_constraintBottom_toTopOf="@+id/imageView"
    app:layout_constraintEnd_toStartOf="@+id/flozbtn"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

<Button
    android:id="@+id/mLbtn"
    android:layout_width="76dp"
    android:layout_height="43dp"
    android:layout_marginTop="22dp"
    android:layout_marginBottom="59dp"
    android:text="@string/ml"
    android:textSize="12sp"
    app:backgroundTint="#DC9679"
    app:layout_constraintBottom_toTopOf="@+id/imageView"
    app:layout_constraintEnd_toStartOf="@+id/ozbtn"
    app:layout_constraintStart_toEndOf="@+id/flozbtn"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    app:layout_constraintVertical_bias="0.6" />

<Button
    android:id="@+id/ozbtn"
    android:layout_width="76dp"
    android:layout_height="43dp"
    android:layout_marginTop="22dp"
    android:layout_marginEnd="63dp"
    android:layout_marginRight="63dp"
    android:layout_marginBottom="59dp"
    android:text="@string/oz"
    android:textSize="12sp"
    app:backgroundTint="#DC9679"
    app:layout_constraintBottom_toTopOf="@+id/imageView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/mLbtn"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

<TextView
    android:id="@+id/Weighttext"
    android:layout_width="98dp"
    android:layout_height="52dp"
    android:layout_marginBottom="500dp"
    android:fontFamily="sans-serif-medium"
    android:text="@string/weight"
    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
    android:textColor="#DC9679"
    android:textSize="30sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.569" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="240dp"
    android:layout_height="182dp"
    android:layout_alignTop="@id/Weighttext"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="40dp"
    android:contentDescription="@string/todo"
    app:layout_constraintBottom_toTopOf="@+id/resetbtn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    app:srcCompat="@drawable/foodsymbol" />

<Button
    android:id="@+id/resetbtn"
    android:layout_width="148dp"
    android:layout_height="50dp"
    android:layout_marginBottom="89dp"
    android:background="#DCBDAD"
    android:text="@string/reset"
    app:backgroundTint="#DCBDAD"
    app:backgroundTintMode="src_atop"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="176dp"
    android:layout_height="95dp"
    android:layout_marginTop="165dp"
    android:layout_marginBottom="120dp"
    android:background="#F3E8DD"
    android:fontFamily="monospace"
    android:gravity="center"
    android:text="@string/textview"
    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
    android:textSize="36sp"
    app:layout_constraintBottom_toTopOf="@+id/imageView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="30.00" />

<Button
    android:id="@+id/flozbtn"
    android:layout_width="76dp"
    android:layout_height="43dp"
    android:layout_marginTop="22dp"
    android:layout_marginBottom="59dp"
    android:text="@string/fl_oz"
    android:textSize="12sp"
    app:backgroundTint="#DC9679"
    app:layout_constraintBottom_toTopOf="@+id/imageView"
    app:layout_constraintEnd_toStartOf="@+id/mLbtn"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toEndOf="@+id/gramsbtn"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    app:layout_constraintVertical_bias="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>
