<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/qty_tv"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="@string/quantitytv"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ingName_tv"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="10dp"
        android:text="@string/ingredientNametv"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/units_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/units_tv"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:padding="10dp"
        android:text="@string/unitstv"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/qty_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_scale"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>



<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_margin="8dp"-->
<!--    android:background="@color/black"-->
<!--    android:gravity="center_vertical">-->

<!--    <TextView-->
<!--        android:id="@+id/qty_tv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentTop="false"-->
<!--        android:padding="14dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="14sp"-->
<!--        android:textStyle="bold" />-->

<!--    <TextView-->
<!--        android:id="@+id/units_tv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_toRightOf="@id/qty_tv"-->
<!--        android:padding="14dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="14dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/ingName_tv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_toRightOf="@id/units_tv"-->
<!--        android:padding="14dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="14dp" />-->


<!--</RelativeLayout>-->